style.css
/* Reset */

html,
body {
  padding: 0;
  margin: 0;
}

html {
  font-family:
    -apple-system,
    blinkmacsystemfont,
    segoe ui,
    roboto,
    oxygen-sans,
    ubuntu,
    cantarell,
    helvetica neue,
    sans-serif;
  line-height: 1.3;
  font-weight: bold;
}

p {
  margin: 0;
}

a {
  text-decoration: none;
  color: var(--red);
  transition: transform 200ms;
  transition-timing-function: ease-out;
}
a:hover {
  transform: scale(110%);
}

* {
  box-sizing: border-box;
}

button {
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  text-shadow: inherit;
  background: none;
  box-shadow: none;
  border: none;
  padding: 0;
  cursor: pointer;
}


/* Vars */

:root {
  --red: #d06060;
  --yellow: #f0bd62;
  --green: #6ead54;
  --blue: #5eb3e2;
  --purple: #8d75cd;

  --font-l: 3.2rem;
  --font-m: 2rem;
  --font-s: 1.2rem;
  --font-xs: 0.72rem;
}


/* UI */

html {
  background: #333;
  color: #eee;
}


/* Game */

.gameContainer {
  font-size: var(--font-m);
  margin: 0 auto;
  max-width: 40rem;
}

.gamePiece {
  cursor: pointer;
  touch-action: none;
  transition: transform 200ms;
  transition-timing-function: ease-out;
}
.gamePiece:hover {
  transform: scale(110%);
}
.gamePiece.-red circle {
  fill: var(--red);
}
.gamePiece.-yellow circle {
  fill: var(--yellow);
}
.gamePiece.-green circle {
  fill: var(--green);
}
.gamePiece.-blue circle {
  fill: var(--blue);
}
.gamePiece.-purple circle {
  fill: var(--purple);
}
.gamePiece text {
  fill: #3336;
  user-select: none;
  pointer-events: none;
}

.gameScore {
  margin-left: var(--font-s);
  color: #eee9;
}

.gameOverScreen {
  position: absolute;
  inset: 0;
  display: grid;
  background-color: #3339;
  place-items: center;
  backdrop-filter: grayscale(40%);
  animation: 2300ms floatIn;
}
.gameOverScreen_text {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--font-xs);
  text-align: center;
  text-shadow: 0 0.1em 0.05em #333;
  user-select: none;
}
.gameOverScreen_title {
  font-size: var(--font-l);
}
.gameOverScreen button {
  animation: 2300ms floatIn;
  animation-fill-mode: backwards;
  animation-delay: 500ms;
  transition: transform 200ms;
  transition-timing-function: ease-out;
}
.gameOverScreen button:hover {
  transform: scale(110%);
}
.gameOverScreen_congrats {
  margin-top: var(--font-m);
  display: flex;
  flex-direction: column;
  gap: var(--font-xs);
  border: 2px solid;
  border-radius: var(--font-m);
  padding: var(--font-s) var(--font-m);
  box-shadow: 0 0.1em 0.05em #333;
  background-color: #3339;
  font-size: var(--font-s);
  text-align: justify;
  color: var(--yellow);
  animation: 2300ms floatIn;
  animation-fill-mode: backwards;
  animation-delay: 800ms;
}

@keyframes floatIn {
  from {
    opacity: 0;
    transform: translateY(var(--font-s));
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

